--- a/TinyShop/Views/Product/Create.cshtml
+++ b/TinyShop/Views/Product/Create.cshtml
@@ -4,7 +4,7 @@
     <title>添加产品</title>
     <meta charset="UTF-8"/>
     <!-- import CSS -->
-    <link href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    <link href="~/lib/element-ui/css/themes/default/index.css"
           rel="stylesheet"/>
 </head>
 <body style="margin: 0;">
@@ -97,10 +97,10 @@
     </el-main>
 </el-container>
 <!-- import Vue before Element -->
-<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<script src="~/lib/vue/js/vue.js"></script>
 <!-- import JavaScript -->
-<script src="https://unpkg.com/element-ui/lib/index.js"></script>
-<script src="https://cdn.bootcdn.net/ajax/libs/axios/0.19.2/axios.js"></script>
+<script src="~/lib/element-ui/js/index.js"></script>
+<script src="~/lib/axios/js/axios.min.js"></script>
 <script>
     const app = new Vue({
         el: "#app",
